# ros

./: .gitignore  .gitmodules  README.md  car.launch  ped.launch  start-or-connect.sh
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: detector.pc  projection.pc  tracker.pc
docs/: ROS Computation Graph  description.md  installation.md  installation_without_docker.md  ros2opencv.ipynb  ros_quick_tutorial.md  rosbag.md  rosbag_exploration.ipynb  rosnode.md
src/car_tracker/: CMakeLists.txt  package.xml  requirements.txt
src/car_tracker/scripts/: multi_object_tracker.py  tracker.py
src/detector/: CMakeLists.txt  README.md  package.xml
src/detector/scripts/: Tracklet_saver.py  pipeline.py  predict_prc.py  predict_rpc.py  predict_test.py  py2utils.py  run_model.py  util.py
src/detector/src/: pipeline.cpp  predict.py  utils.cpp
src/ped_tracker/: CMakeLists.txt  package.xml
src/ped_tracker/launch/: tracklet_ped_test.launch
src/ped_tracker/scripts/: tracker.py
src/projection/launch/: config-result.rviz  config.rviz  ped-config-result.rviz  tracklet.launch  tracklet_interact.launch  tracklet_new.launch  visualize.launch
src/projection/scripts/: interact_tracklet.py  visualize_result.py  visualize_tracklet.py
src/sensor/: README.md
src/sensor/c_python_lib/: Makefile  func.py  predict.py  predict_test  predict_test.cpp
src/sensor/sensor_fusion/: CMakeLists.txt  package.xml
src/sensor/sensor_fusion/src/: image_pointcloud_sync.cpp
src/tracker/: package.xml  readme.md
src/tracker/scripts/: Tracklet_saver.py  multi_object_tracker.py  (+1 more)
(+38 files in other folders)
